Fixing server and tokens tasks, tweaking some base app styles and classnames

--- a/site/pages/design/colours.html
+++ b/site/pages/design/colours.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block intro %}
-    <div class="panel-right-padding panel-intro">
+    <div class="gutters panel-intro">
         <p>
             Colours are generated from the Design Tokens automatically.
         </p>
